test.output
Grammar

    0 $accept: program $end

    1 program: STRUCT ID OFB structmem CFB idlist SC program
    2        | STRUCT ID OFB structmem CFB SC program
    3        | methoddef program
    4        | class program
    5        | app

    6 app: MAIN OB CB OFB statlist CFB

    7 class: CLASS ID ext OFB pvt pub pro CFB SC

    8 ext: COLON accspec ID idext
    9    | %empty

   10 idext: COMMA accspec ID idext
   11      | %empty

   12 accspec: PRIVATE
   13        | PUBLIC
   14        | PROTECTED
   15        | %empty

   16 pvt: PRIVATE COLON member
   17    | member

   18 pub: PUBLIC COLON member
   19    | %empty

   20 pro: PROTECTED COLON member
   21    | %empty

   22 member: dtype osd member
   23       | ID OB paramlist CB methterm member
   24       | %empty

   25 osd: OSB CSB ID OB paramlist CB methterm
   26    | ID OB paramlist CB methterm
   27    | idlist SC

   28 structmem: STATIC declarations
   29          | asstat SC structmem
   30          | declarations structmem
   31          | methoddef structmem
   32          | %empty

   33 methoddef: dtype OSB CSB ID lmn
   34          | dtype ID lmn

   35 lmn: OB paramlist CB methterm
   36    | COLON COLON ID OB paramlist CB OFB statlist CFB

   37 methterm: OFB statlist CFB
   38         | SC

   39 paramlist: dtype ID paramlistext
   40          | ID ID paramlistext
   41          | %empty

   42 paramlistext: COMMA efg
   43             | %empty

   44 efg: %empty
   45    | ID ID paramlistext

   46 dtype: sign abc
   47      | CHAR
   48      | FLOAT
   49      | DOUBLE
   50      | BOOL

   51 abc: INT
   52    | SHORT INT
   53    | LONG INT
   54    | LONG LONG INT

   55 sign: SIGNED
   56     | UNSIGNED
   57     | %empty

   58 idlist: ID xyz

   59 xyz: COMMA idlist
   60    | OSB NUM CSB COMMA idlist
   61    | ID OSB NUM CSB
   62    | %empty

   63 statlist: stat statlist
   64         | %empty

   65 stat: declarations
   66     | unarystat SC
   67     | asstat SC
   68     | decstat
   69     | loopstat
   70     | switchblock
   71     | BREAK SC
   72     | methcall SC

   73 methcall: ID OB arglist CB

   74 arglist: ID argext
   75        | %empty

   76 argext: COMMA ID argext
   77       | %empty

   78 unarystat: unaryop ID
   79          | ID unaryop

   80 unaryop: PPLUS
   81        | MMINUS

   82 unaryexpn: unaryop ID
   83          | ID unaryop
   84          | NOT ID

   85 declarations: dtype idlist ijk
   86             | ID idlist ijk

   87 ijk: SC
   88    | EQU expn SC

   89 asstat: ID omn

   90 omn: assign expn
   91    | DOT ID assign expn

   92 assign: EQU
   93       | PEQU
   94       | SEQU
   95       | MEQU
   96       | DEQU

   97 expn: unaryexpn
   98     | methcall
   99     | ID DOT methcall
  100     | sexpn eprime

  101 eprime: relop sexpn
  102       | %empty

  103 sexpn: term seprime
  104      | %empty

  105 seprime: addop term seprime
  106        | %empty

  107 term: factor tprime

  108 tprime: mulop factor tprime
  109       | %empty

  110 factor: ID
  111       | NUM

  112 decstat: IF OB expn CB OFB statlist CFB dprime

  113 dprime: ELSE OFB statlist CFB
  114       | %empty

  115 switchblock: SWITCH OB expn CB OFB caseb defaultb CFB

  116 caseb: CASE constants COLON statlist casebext

  117 casebext: caseb
  118         | %empty

  119 defaultb: DEFAULT COLON statlist
  120         | %empty

  121 constants: NUM
  122          | DQ ID DQ

  123 loopstat: WHILE OB expn CB OFB statlist CFB
  124         | FOR OB asstat SC expn SC asstat CB OFB statlist CFB
  125         | DO OFB statlist CFB WHILE OB expn CB SC

  126 relop: EQQ
  127      | NEQU
  128      | LT
  129      | GT
  130      | G
  131      | L

  132 addop: PLUS
  133      | MINUS

  134 mulop: MUL
  135      | DIV
  136      | MOD


Terminals, with rules where they appear

$end (0) 0
error (256)
MAIN (258) 6
OB (259) 6 23 25 26 35 36 73 112 115 123 124 125
CB (260) 6 23 25 26 35 36 73 112 115 123 124 125
OFB (261) 1 2 6 7 36 37 112 113 115 123 124 125
CFB (262) 1 2 6 7 36 37 112 113 115 123 124 125
SC (263) 1 2 7 27 29 38 66 67 71 72 87 88 124 125
INT (264) 51 52 53 54
CHAR (265) 47
COMMA (266) 10 42 59 60 76
OSB (267) 25 33 60 61
CSB (268) 25 33 60 61
EQU (269) 88 92
IF (270) 112
ID (271) 1 2 7 8 10 23 25 26 33 34 36 39 40 45 58 61 73 74 76 78 79
    82 83 84 86 89 91 99 110 122
NUM (272) 60 61 111 121
ELSE (273) 113
WHILE (274) 123 125
FOR (275) 124
DO (276) 125
EQQ (277) 126
NEQU (278) 127
LT (279) 128
GT (280) 129
G (281) 130
L (282) 131
PLUS (283) 132
MINUS (284) 133
MUL (285) 134
DIV (286) 135
MOD (287) 136
SWITCH (288) 115
CASE (289) 116
DEFAULT (290) 119
COLON (291) 8 16 18 20 36 116 119
DQ (292) 122
BREAK (293) 71
PPLUS (294) 80
MMINUS (295) 81
NOT (296) 84
PEQU (297) 93
SEQU (298) 94
MEQU (299) 95
DEQU (300) 96
STRUCT (301) 1 2
STATIC (302) 28
FLOAT (303) 48
DOUBLE (304) 49
BOOL (305) 50
SHORT (306) 52
LONG (307) 53 54
SIGNED (308) 55
UNSIGNED (309) 56
CLASS (310) 7
PRIVATE (311) 12 16
PUBLIC (312) 13 18
PROTECTED (313) 14 20
DOT (314) 91 99


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1 2 3 4 5, on right: 0 1 2 3 4
app (62)
    on left: 6, on right: 5
class (63)
    on left: 7, on right: 4
ext (64)
    on left: 8 9, on right: 7
idext (65)
    on left: 10 11, on right: 8 10
accspec (66)
    on left: 12 13 14 15, on right: 8 10
pvt (67)
    on left: 16 17, on right: 7
pub (68)
    on left: 18 19, on right: 7
pro (69)
    on left: 20 21, on right: 7
member (70)
    on left: 22 23 24, on right: 16 17 18 20 22 23
osd (71)
    on left: 25 26 27, on right: 22
structmem (72)
    on left: 28 29 30 31 32, on right: 1 2 29 30 31
methoddef (73)
    on left: 33 34, on right: 3 31
lmn (74)
    on left: 35 36, on right: 33 34
methterm (75)
    on left: 37 38, on right: 23 25 26 35
paramlist (76)
    on left: 39 40 41, on right: 23 25 26 35 36
paramlistext (77)
    on left: 42 43, on right: 39 40 45
efg (78)
    on left: 44 45, on right: 42
dtype (79)
    on left: 46 47 48 49 50, on right: 22 33 34 39 85
abc (80)
    on left: 51 52 53 54, on right: 46
sign (81)
    on left: 55 56 57, on right: 46
idlist (82)
    on left: 58, on right: 1 27 59 60 85 86
xyz (83)
    on left: 59 60 61 62, on right: 58
statlist (84)
    on left: 63 64, on right: 6 36 37 63 112 113 116 119 123 124 125
stat (85)
    on left: 65 66 67 68 69 70 71 72, on right: 63
methcall (86)
    on left: 73, on right: 72 98 99
arglist (87)
    on left: 74 75, on right: 73
argext (88)
    on left: 76 77, on right: 74 76
unarystat (89)
    on left: 78 79, on right: 66
unaryop (90)
    on left: 80 81, on right: 78 79 82 83
unaryexpn (91)
    on left: 82 83 84, on right: 97
declarations (92)
    on left: 85 86, on right: 28 30 65
ijk (93)
    on left: 87 88, on right: 85 86
asstat (94)
    on left: 89, on right: 29 67 124
omn (95)
    on left: 90 91, on right: 89
assign (96)
    on left: 92 93 94 95 96, on right: 90 91
expn (97)
    on left: 97 98 99 100, on right: 88 90 91 112 115 123 124 125
eprime (98)
    on left: 101 102, on right: 100
sexpn (99)
    on left: 103 104, on right: 100 101
seprime (100)
    on left: 105 106, on right: 103 105
term (101)
    on left: 107, on right: 103 105
tprime (102)
    on left: 108 109, on right: 107 108
factor (103)
    on left: 110 111, on right: 107 108
decstat (104)
    on left: 112, on right: 68
dprime (105)
    on left: 113 114, on right: 112
switchblock (106)
    on left: 115, on right: 70
caseb (107)
    on left: 116, on right: 115 117
casebext (108)
    on left: 117 118, on right: 116
defaultb (109)
    on left: 119 120, on right: 115
constants (110)
    on left: 121 122, on right: 116
loopstat (111)
    on left: 123 124 125, on right: 69
relop (112)
    on left: 126 127 128 129 130 131, on right: 101
addop (113)
    on left: 132 133, on right: 105
mulop (114)
    on left: 134 135 136, on right: 108


State 0

    0 $accept: . program $end

    MAIN      shift, and go to state 1
    CHAR      shift, and go to state 2
    STRUCT    shift, and go to state 3
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    CLASS     shift, and go to state 9

    $default  reduce using rule 57 (sign)

    program    go to state 10
    app        go to state 11
    class      go to state 12
    methoddef  go to state 13
    dtype      go to state 14
    sign       go to state 15


State 1

    6 app: MAIN . OB CB OFB statlist CFB

    OB  shift, and go to state 16


State 2

   47 dtype: CHAR .

    $default  reduce using rule 47 (dtype)


State 3

    1 program: STRUCT . ID OFB structmem CFB idlist SC program
    2        | STRUCT . ID OFB structmem CFB SC program

    ID  shift, and go to state 17


State 4

   48 dtype: FLOAT .

    $default  reduce using rule 48 (dtype)


State 5

   49 dtype: DOUBLE .

    $default  reduce using rule 49 (dtype)


State 6

   50 dtype: BOOL .

    $default  reduce using rule 50 (dtype)


State 7

   55 sign: SIGNED .

    $default  reduce using rule 55 (sign)


State 8

   56 sign: UNSIGNED .

    $default  reduce using rule 56 (sign)


State 9

    7 class: CLASS . ID ext OFB pvt pub pro CFB SC

    ID  shift, and go to state 18


State 10

    0 $accept: program . $end

    $end  shift, and go to state 19


State 11

    5 program: app .

    $default  reduce using rule 5 (program)


State 12

    4 program: class . program

    MAIN      shift, and go to state 1
    CHAR      shift, and go to state 2
    STRUCT    shift, and go to state 3
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    CLASS     shift, and go to state 9

    $default  reduce using rule 57 (sign)

    program    go to state 20
    app        go to state 11
    class      go to state 12
    methoddef  go to state 13
    dtype      go to state 14
    sign       go to state 15


State 13

    3 program: methoddef . program

    MAIN      shift, and go to state 1
    CHAR      shift, and go to state 2
    STRUCT    shift, and go to state 3
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    CLASS     shift, and go to state 9

    $default  reduce using rule 57 (sign)

    program    go to state 21
    app        go to state 11
    class      go to state 12
    methoddef  go to state 13
    dtype      go to state 14
    sign       go to state 15


State 14

   33 methoddef: dtype . OSB CSB ID lmn
   34          | dtype . ID lmn

    OSB  shift, and go to state 22
    ID   shift, and go to state 23


State 15

   46 dtype: sign . abc

    INT    shift, and go to state 24
    SHORT  shift, and go to state 25
    LONG   shift, and go to state 26

    abc  go to state 27


State 16

    6 app: MAIN OB . CB OFB statlist CFB

    CB  shift, and go to state 28


State 17

    1 program: STRUCT ID . OFB structmem CFB idlist SC program
    2        | STRUCT ID . OFB structmem CFB SC program

    OFB  shift, and go to state 29


State 18

    7 class: CLASS ID . ext OFB pvt pub pro CFB SC

    COLON  shift, and go to state 30

    $default  reduce using rule 9 (ext)

    ext  go to state 31


State 19

    0 $accept: program $end .

    $default  accept


State 20

    4 program: class program .

    $default  reduce using rule 4 (program)


State 21

    3 program: methoddef program .

    $default  reduce using rule 3 (program)


State 22

   33 methoddef: dtype OSB . CSB ID lmn

    CSB  shift, and go to state 32


State 23

   34 methoddef: dtype ID . lmn

    OB     shift, and go to state 33
    COLON  shift, and go to state 34

    lmn  go to state 35


State 24

   51 abc: INT .

    $default  reduce using rule 51 (abc)


State 25

   52 abc: SHORT . INT

    INT  shift, and go to state 36


State 26

   53 abc: LONG . INT
   54    | LONG . LONG INT

    INT   shift, and go to state 37
    LONG  shift, and go to state 38


State 27

   46 dtype: sign abc .

    $default  reduce using rule 46 (dtype)


State 28

    6 app: MAIN OB CB . OFB statlist CFB

    OFB  shift, and go to state 39


State 29

    1 program: STRUCT ID OFB . structmem CFB idlist SC program
    2        | STRUCT ID OFB . structmem CFB SC program

    CHAR      shift, and go to state 2
    ID        shift, and go to state 40
    STATIC    shift, and go to state 41
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 32 (structmem)
    $default  reduce using rule 57 (sign)

    structmem     go to state 42
    methoddef     go to state 43
    dtype         go to state 44
    sign          go to state 15
    declarations  go to state 45
    asstat        go to state 46


State 30

    8 ext: COLON . accspec ID idext

    PRIVATE    shift, and go to state 47
    PUBLIC     shift, and go to state 48
    PROTECTED  shift, and go to state 49

    $default  reduce using rule 15 (accspec)

    accspec  go to state 50


State 31

    7 class: CLASS ID ext . OFB pvt pub pro CFB SC

    OFB  shift, and go to state 51


State 32

   33 methoddef: dtype OSB CSB . ID lmn

    ID  shift, and go to state 52


State 33

   35 lmn: OB . paramlist CB methterm

    CHAR      shift, and go to state 2
    ID        shift, and go to state 53
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CB        reduce using rule 41 (paramlist)
    $default  reduce using rule 57 (sign)

    paramlist  go to state 54
    dtype      go to state 55
    sign       go to state 15


State 34

   36 lmn: COLON . COLON ID OB paramlist CB OFB statlist CFB

    COLON  shift, and go to state 56


State 35

   34 methoddef: dtype ID lmn .

    $default  reduce using rule 34 (methoddef)


State 36

   52 abc: SHORT INT .

    $default  reduce using rule 52 (abc)


State 37

   53 abc: LONG INT .

    $default  reduce using rule 53 (abc)


State 38

   54 abc: LONG LONG . INT

    INT  shift, and go to state 57


State 39

    6 app: MAIN OB CB OFB . statlist CFB

    CHAR      shift, and go to state 2
    IF        shift, and go to state 58
    ID        shift, and go to state 59
    WHILE     shift, and go to state 60
    FOR       shift, and go to state 61
    DO        shift, and go to state 62
    SWITCH    shift, and go to state 63
    BREAK     shift, and go to state 64
    PPLUS     shift, and go to state 65
    MMINUS    shift, and go to state 66
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 64 (statlist)
    $default  reduce using rule 57 (sign)

    dtype         go to state 67
    sign          go to state 15
    statlist      go to state 68
    stat          go to state 69
    methcall      go to state 70
    unarystat     go to state 71
    unaryop       go to state 72
    declarations  go to state 73
    asstat        go to state 74
    decstat       go to state 75
    switchblock   go to state 76
    loopstat      go to state 77


State 40

   86 declarations: ID . idlist ijk
   89 asstat: ID . omn

    EQU   shift, and go to state 78
    ID    shift, and go to state 79
    PEQU  shift, and go to state 80
    SEQU  shift, and go to state 81
    MEQU  shift, and go to state 82
    DEQU  shift, and go to state 83
    DOT   shift, and go to state 84

    idlist  go to state 85
    omn     go to state 86
    assign  go to state 87


State 41

   28 structmem: STATIC . declarations

    CHAR      shift, and go to state 2
    ID        shift, and go to state 88
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    $default  reduce using rule 57 (sign)

    dtype         go to state 67
    sign          go to state 15
    declarations  go to state 89


State 42

    1 program: STRUCT ID OFB structmem . CFB idlist SC program
    2        | STRUCT ID OFB structmem . CFB SC program

    CFB  shift, and go to state 90


State 43

   31 structmem: methoddef . structmem

    CHAR      shift, and go to state 2
    ID        shift, and go to state 40
    STATIC    shift, and go to state 41
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 32 (structmem)
    $default  reduce using rule 57 (sign)

    structmem     go to state 91
    methoddef     go to state 43
    dtype         go to state 44
    sign          go to state 15
    declarations  go to state 45
    asstat        go to state 46


State 44

   33 methoddef: dtype . OSB CSB ID lmn
   34          | dtype . ID lmn
   85 declarations: dtype . idlist ijk

    OSB  shift, and go to state 22
    ID   shift, and go to state 92

    idlist  go to state 93


State 45

   30 structmem: declarations . structmem

    CHAR      shift, and go to state 2
    ID        shift, and go to state 40
    STATIC    shift, and go to state 41
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 32 (structmem)
    $default  reduce using rule 57 (sign)

    structmem     go to state 94
    methoddef     go to state 43
    dtype         go to state 44
    sign          go to state 15
    declarations  go to state 45
    asstat        go to state 46


State 46

   29 structmem: asstat . SC structmem

    SC  shift, and go to state 95


State 47

   12 accspec: PRIVATE .

    $default  reduce using rule 12 (accspec)


State 48

   13 accspec: PUBLIC .

    $default  reduce using rule 13 (accspec)


State 49

   14 accspec: PROTECTED .

    $default  reduce using rule 14 (accspec)


State 50

    8 ext: COLON accspec . ID idext

    ID  shift, and go to state 96


State 51

    7 class: CLASS ID ext OFB . pvt pub pro CFB SC

    CHAR      shift, and go to state 2
    ID        shift, and go to state 97
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    PRIVATE   shift, and go to state 98

    INT       reduce using rule 57 (sign)
    SHORT     reduce using rule 57 (sign)
    LONG      reduce using rule 57 (sign)
    $default  reduce using rule 24 (member)

    pvt     go to state 99
    member  go to state 100
    dtype   go to state 101
    sign    go to state 15


State 52

   33 methoddef: dtype OSB CSB ID . lmn

    OB     shift, and go to state 33
    COLON  shift, and go to state 34

    lmn  go to state 102


State 53

   40 paramlist: ID . ID paramlistext

    ID  shift, and go to state 103


State 54

   35 lmn: OB paramlist . CB methterm

    CB  shift, and go to state 104


State 55

   39 paramlist: dtype . ID paramlistext

    ID  shift, and go to state 105


State 56

   36 lmn: COLON COLON . ID OB paramlist CB OFB statlist CFB

    ID  shift, and go to state 106


State 57

   54 abc: LONG LONG INT .

    $default  reduce using rule 54 (abc)


State 58

  112 decstat: IF . OB expn CB OFB statlist CFB dprime

    OB  shift, and go to state 107


State 59

   73 methcall: ID . OB arglist CB
   79 unarystat: ID . unaryop
   86 declarations: ID . idlist ijk
   89 asstat: ID . omn

    OB      shift, and go to state 108
    EQU     shift, and go to state 78
    ID      shift, and go to state 79
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    PEQU    shift, and go to state 80
    SEQU    shift, and go to state 81
    MEQU    shift, and go to state 82
    DEQU    shift, and go to state 83
    DOT     shift, and go to state 84

    idlist   go to state 85
    unaryop  go to state 109
    omn      go to state 86
    assign   go to state 87


State 60

  123 loopstat: WHILE . OB expn CB OFB statlist CFB

    OB  shift, and go to state 110


State 61

  124 loopstat: FOR . OB asstat SC expn SC asstat CB OFB statlist CFB

    OB  shift, and go to state 111


State 62

  125 loopstat: DO . OFB statlist CFB WHILE OB expn CB SC

    OFB  shift, and go to state 112


State 63

  115 switchblock: SWITCH . OB expn CB OFB caseb defaultb CFB

    OB  shift, and go to state 113


State 64

   71 stat: BREAK . SC

    SC  shift, and go to state 114


State 65

   80 unaryop: PPLUS .

    $default  reduce using rule 80 (unaryop)


State 66

   81 unaryop: MMINUS .

    $default  reduce using rule 81 (unaryop)


State 67

   85 declarations: dtype . idlist ijk

    ID  shift, and go to state 79

    idlist  go to state 93


State 68

    6 app: MAIN OB CB OFB statlist . CFB

    CFB  shift, and go to state 115


State 69

   63 statlist: stat . statlist

    CHAR      shift, and go to state 2
    IF        shift, and go to state 58
    ID        shift, and go to state 59
    WHILE     shift, and go to state 60
    FOR       shift, and go to state 61
    DO        shift, and go to state 62
    SWITCH    shift, and go to state 63
    BREAK     shift, and go to state 64
    PPLUS     shift, and go to state 65
    MMINUS    shift, and go to state 66
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 64 (statlist)
    CASE      reduce using rule 64 (statlist)
    DEFAULT   reduce using rule 64 (statlist)
    $default  reduce using rule 57 (sign)

    dtype         go to state 67
    sign          go to state 15
    statlist      go to state 116
    stat          go to state 69
    methcall      go to state 70
    unarystat     go to state 71
    unaryop       go to state 72
    declarations  go to state 73
    asstat        go to state 74
    decstat       go to state 75
    switchblock   go to state 76
    loopstat      go to state 77


State 70

   72 stat: methcall . SC

    SC  shift, and go to state 117


State 71

   66 stat: unarystat . SC

    SC  shift, and go to state 118


State 72

   78 unarystat: unaryop . ID

    ID  shift, and go to state 119


State 73

   65 stat: declarations .

    $default  reduce using rule 65 (stat)


State 74

   67 stat: asstat . SC

    SC  shift, and go to state 120


State 75

   68 stat: decstat .

    $default  reduce using rule 68 (stat)


State 76

   70 stat: switchblock .

    $default  reduce using rule 70 (stat)


State 77

   69 stat: loopstat .

    $default  reduce using rule 69 (stat)


State 78

   92 assign: EQU .

    $default  reduce using rule 92 (assign)


State 79

   58 idlist: ID . xyz

    COMMA  shift, and go to state 121
    OSB    shift, and go to state 122
    ID     shift, and go to state 123

    $default  reduce using rule 62 (xyz)

    xyz  go to state 124


State 80

   93 assign: PEQU .

    $default  reduce using rule 93 (assign)


State 81

   94 assign: SEQU .

    $default  reduce using rule 94 (assign)


State 82

   95 assign: MEQU .

    $default  reduce using rule 95 (assign)


State 83

   96 assign: DEQU .

    $default  reduce using rule 96 (assign)


State 84

   91 omn: DOT . ID assign expn

    ID  shift, and go to state 125


State 85

   86 declarations: ID idlist . ijk

    SC   shift, and go to state 126
    EQU  shift, and go to state 127

    ijk  go to state 128


State 86

   89 asstat: ID omn .

    $default  reduce using rule 89 (asstat)


State 87

   90 omn: assign . expn

    ID      shift, and go to state 129
    NUM     shift, and go to state 130
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    NOT     shift, and go to state 131

    $default  reduce using rule 104 (sexpn)

    methcall   go to state 132
    unaryop    go to state 133
    unaryexpn  go to state 134
    expn       go to state 135
    sexpn      go to state 136
    term       go to state 137
    factor     go to state 138


State 88

   86 declarations: ID . idlist ijk

    ID  shift, and go to state 79

    idlist  go to state 85


State 89

   28 structmem: STATIC declarations .

    $default  reduce using rule 28 (structmem)


State 90

    1 program: STRUCT ID OFB structmem CFB . idlist SC program
    2        | STRUCT ID OFB structmem CFB . SC program

    SC  shift, and go to state 139
    ID  shift, and go to state 79

    idlist  go to state 140


State 91

   31 structmem: methoddef structmem .

    $default  reduce using rule 31 (structmem)


State 92

   34 methoddef: dtype ID . lmn
   58 idlist: ID . xyz

    OB     shift, and go to state 33
    COMMA  shift, and go to state 121
    OSB    shift, and go to state 122
    ID     shift, and go to state 123
    COLON  shift, and go to state 34

    $default  reduce using rule 62 (xyz)

    lmn  go to state 35
    xyz  go to state 124


State 93

   85 declarations: dtype idlist . ijk

    SC   shift, and go to state 126
    EQU  shift, and go to state 127

    ijk  go to state 141


State 94

   30 structmem: declarations structmem .

    $default  reduce using rule 30 (structmem)


State 95

   29 structmem: asstat SC . structmem

    CHAR      shift, and go to state 2
    ID        shift, and go to state 40
    STATIC    shift, and go to state 41
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 32 (structmem)
    $default  reduce using rule 57 (sign)

    structmem     go to state 142
    methoddef     go to state 43
    dtype         go to state 44
    sign          go to state 15
    declarations  go to state 45
    asstat        go to state 46


State 96

    8 ext: COLON accspec ID . idext

    COMMA  shift, and go to state 143

    $default  reduce using rule 11 (idext)

    idext  go to state 144


State 97

   23 member: ID . OB paramlist CB methterm member

    OB  shift, and go to state 145


State 98

   16 pvt: PRIVATE . COLON member

    COLON  shift, and go to state 146


State 99

    7 class: CLASS ID ext OFB pvt . pub pro CFB SC

    PUBLIC  shift, and go to state 147

    $default  reduce using rule 19 (pub)

    pub  go to state 148


State 100

   17 pvt: member .

    $default  reduce using rule 17 (pvt)


State 101

   22 member: dtype . osd member

    OSB  shift, and go to state 149
    ID   shift, and go to state 150

    osd     go to state 151
    idlist  go to state 152


State 102

   33 methoddef: dtype OSB CSB ID lmn .

    $default  reduce using rule 33 (methoddef)


State 103

   40 paramlist: ID ID . paramlistext

    COMMA  shift, and go to state 153

    $default  reduce using rule 43 (paramlistext)

    paramlistext  go to state 154


State 104

   35 lmn: OB paramlist CB . methterm

    OFB  shift, and go to state 155
    SC   shift, and go to state 156

    methterm  go to state 157


State 105

   39 paramlist: dtype ID . paramlistext

    COMMA  shift, and go to state 153

    $default  reduce using rule 43 (paramlistext)

    paramlistext  go to state 158


State 106

   36 lmn: COLON COLON ID . OB paramlist CB OFB statlist CFB

    OB  shift, and go to state 159


State 107

  112 decstat: IF OB . expn CB OFB statlist CFB dprime

    ID      shift, and go to state 129
    NUM     shift, and go to state 130
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    NOT     shift, and go to state 131

    $default  reduce using rule 104 (sexpn)

    methcall   go to state 132
    unaryop    go to state 133
    unaryexpn  go to state 134
    expn       go to state 160
    sexpn      go to state 136
    term       go to state 137
    factor     go to state 138


State 108

   73 methcall: ID OB . arglist CB

    ID  shift, and go to state 161

    $default  reduce using rule 75 (arglist)

    arglist  go to state 162


State 109

   79 unarystat: ID unaryop .

    $default  reduce using rule 79 (unarystat)


State 110

  123 loopstat: WHILE OB . expn CB OFB statlist CFB

    ID      shift, and go to state 129
    NUM     shift, and go to state 130
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    NOT     shift, and go to state 131

    $default  reduce using rule 104 (sexpn)

    methcall   go to state 132
    unaryop    go to state 133
    unaryexpn  go to state 134
    expn       go to state 163
    sexpn      go to state 136
    term       go to state 137
    factor     go to state 138


State 111

  124 loopstat: FOR OB . asstat SC expn SC asstat CB OFB statlist CFB

    ID  shift, and go to state 164

    asstat  go to state 165


State 112

  125 loopstat: DO OFB . statlist CFB WHILE OB expn CB SC

    CHAR      shift, and go to state 2
    IF        shift, and go to state 58
    ID        shift, and go to state 59
    WHILE     shift, and go to state 60
    FOR       shift, and go to state 61
    DO        shift, and go to state 62
    SWITCH    shift, and go to state 63
    BREAK     shift, and go to state 64
    PPLUS     shift, and go to state 65
    MMINUS    shift, and go to state 66
    FLOAT     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    BOOL      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8

    CFB       reduce using rule 64 (statlist)
    $default  reduce using rule 57 (sign)

    dtype         go to state 67
    sign          go to state 15
    statlist      go to state 166
    stat          go to state 69
    methcall      go to state 70
    unarystat     go to state 71
    unaryop       go to state 72
    declarations  go to state 73
    asstat        go to state 74
    decstat       go to state 75
    switchblock   go to state 76
    loopstat      go to state 77


State 113

  115 switchblock: SWITCH OB . expn CB OFB caseb defaultb CFB

    ID      shift, and go to state 129
    NUM     shift, and go to state 130
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    NOT     shift, and go to state 131

    $default  reduce using rule 104 (sexpn)

    methcall   go to state 132
    unaryop    go to state 133
    unaryexpn  go to state 134
    expn       go to state 167
    sexpn      go to state 136
    term       go to state 137
    factor     go to state 138


State 114

   71 stat: BREAK SC .

    $default  reduce using rule 71 (stat)


State 115

    6 app: MAIN OB CB OFB statlist CFB .

    $default  reduce using rule 6 (app)


State 116

   63 statlist: stat statlist .

    $default  reduce using rule 63 (statlist)


State 117

   72 stat: methcall SC .

    $default  reduce using rule 72 (stat)


State 118

   66 stat: unarystat SC .

    $default  reduce using rule 66 (stat)


State 119

   78 unarystat: unaryop ID .

    $default  reduce using rule 78 (unarystat)


State 120

   67 stat: asstat SC .

    $default  reduce using rule 67 (stat)


State 121

   59 xyz: COMMA . idlist

    ID  shift, and go to state 79

    idlist  go to state 168


State 122

   60 xyz: OSB . NUM CSB COMMA idlist

    NUM  shift, and go to state 169


State 123

   61 xyz: ID . OSB NUM CSB

    OSB  shift, and go to state 170


State 124

   58 idlist: ID xyz .

    $default  reduce using rule 58 (idlist)


State 125

   91 omn: DOT ID . assign expn

    EQU   shift, and go to state 78
    PEQU  shift, and go to state 80
    SEQU  shift, and go to state 81
    MEQU  shift, and go to state 82
    DEQU  shift, and go to state 83

    assign  go to state 171


State 126

   87 ijk: SC .

    $default  reduce using rule 87 (ijk)


State 127

   88 ijk: EQU . expn SC

    ID      shift, and go to state 129
    NUM     shift, and go to state 130
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    NOT     shift, and go to state 131

    $default  reduce using rule 104 (sexpn)

    methcall   go to state 132
    unaryop    go to state 133
    unaryexpn  go to state 134
    expn       go to state 172
    sexpn      go to state 136
    term       go to state 137
    factor     go to state 138


State 128

   86 declarations: ID idlist ijk .

    $default  reduce using rule 86 (declarations)


State 129

   73 methcall: ID . OB arglist CB
   83 unaryexpn: ID . unaryop
   99 expn: ID . DOT methcall
  110 factor: ID .

    OB      shift, and go to state 108
    PPLUS   shift, and go to state 65
    MMINUS  shift, and go to state 66
    DOT     shift, and go to state 173

    $default  reduce using rule 110 (factor)

    unaryop  go to state 174


State 130

  111 factor: NUM .

    $default  reduce using rule 111 (factor)


State 131

   84 unaryexpn: NOT . ID

    ID  shift, and go to state 175


State 132

   98 expn: methcall .

    $default  reduce using rule 98 (expn)


State 133

   82 unaryexpn: unaryop . ID

    ID  shift, and go to state 176


State 134

   97 expn: unaryexpn .

    $default  reduce using rule 97 (expn)


State 135

   90 omn: assign expn .

    $default  reduce using rule 90 (omn)


State 136
